--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 layout: default
 title: Home
 ---
-<h1>{{ "Hello World!" | downcase }}</h1>
+<h1>Project Saturn</h1>
+<p>Project Saturn is a research project for EECS 499 at the University of Michigan. It aims to teach important "adult life" concepts through a video game.</p>
