--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
 layout: default
-title: Home
+title: Project Saturn
 ---
-<h1>Project Saturn</h1>
 <p>Project Saturn is a research project for EECS 499 at the University of Michigan. It aims to teach important "adult life" concepts, such as doing taxes and managing a credit score, through a video game.</p>
