--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: default
 title: Project Saturn
 ---
-<p>Project Saturn is a research project for EECS 499 at the University of Michigan. It aims to teach important "adult life" concepts, such as doing taxes and managing a credit score, through a video game.</p>
+<p>Project Saturn is a research project for EECS 499 at the University of Michigan. It aims to teach important personal finance topics, such as doing taxes and managing a credit score, through a video game.</p>
