--- a/index.html
+++ b/index.html
@@ -3,3 +3,7 @@ layout: default
 title: Project Saturn
 ---
 <p>Project Saturn is a research project for EECS 499 at the University of Michigan. It aims to teach important personal finance topics, such as doing taxes and managing a credit score, through a video game.</p>
+
+<h1>
+	<a href="/Pre-Gold-WebBuild/RoadToRetirement.html">Play the game!</a>
+</h1>
